fix z-index issues/stacking issues

--- a/assets/base.css
+++ b/assets/base.css
@@ -747,7 +747,7 @@ details > * {
   --duration-long: 500ms;
   --duration-extra-long: 600ms;
   --animation-slide-in: slideIn var(--duration-extra-long) cubic-bezier(0, 0, 0.3, 1) forwards;
-  --animation-fade-in: fadeIn var(--duration-extra-long) cubic-bezier(0, 0, 0.3, 1) forwards;
+  --animation-fade-in: fadeIn var(--duration-extra-long) cubic-bezier(0, 0, 0.3, 1);
 }
 
 .underlined-link,
@@ -3284,6 +3284,7 @@ details-disclosure > details {
   }
 
   .scroll-trigger:not(.scroll-trigger--offscreen).animate--fade-in {
+    opacity: 1;
     animation: var(--animation-fade-in);
   }
 
